package data

 import  ( pb "totality-project-gRPC/proto") 

var UsersData = map[int32]pb.UserResponse{
    1:  {UserId: 1, FirstName: "John", City: "LA", Phone: "111-222-3333", Height: 5.8, Married: false},
    2:  {UserId: 2, FirstName: "Alice", City: "New York", Phone: "222-333-4444", Height: 5.6, Married: true},
    3:  {UserId: 3, FirstName: "David", City: "Chicago", Phone: "333-444-5555", Height: 6.0, Married: false},
    4:  {UserId: 4, FirstName: "Eva", City: "San Francisco", Phone: "444-555-6666", Height: 5.7, Married: true},
    5:  {UserId: 5, FirstName: "Michael", City: "Houston", Phone: "555-666-7777", Height: 6.2, Married: false},
    6:  {UserId: 6, FirstName: "Linda", City: "Seattle", Phone: "666-777-8888", Height: 5.9, Married: true},
    7:  {UserId: 7, FirstName: "Daniel", City: "Boston", Phone: "777-888-9999", Height: 5.8, Married: false},
    8:  {UserId: 8, FirstName: "Olivia", City: "Los Angeles", Phone: "888-999-0000", Height: 5.6, Married: true},
    9:  {UserId: 9, FirstName: "Sophia", City: "San Diego", Phone: "999-000-1111", Height: 6.1, Married: false},
    10: {UserId: 10, FirstName: "William", City: "Miami", Phone: "111-222-3333", Height: 5.4, Married: true},
    11: {UserId: 11, FirstName: "Mia", City: "Dallas", Phone: "222-333-4444", Height: 5.9, Married: false},
    12: {UserId: 12, FirstName: "Emily", City: "Phoenix", Phone: "333-444-5555", Height: 5.7, Married: true},
    13: {UserId: 13, FirstName: "James", City: "San Antonio", Phone: "444-555-6666", Height: 6.0, Married: false},
    14: {UserId: 14, FirstName: "Lucas", City: "Atlanta", Phone: "555-666-7777", Height: 5.6, Married: true},
    15: {UserId: 15, FirstName: "Ava", City: "Denver", Phone: "666-777-8888", Height: 6.3, Married: false},
    16: {UserId: 16, FirstName: "Benjamin", City: "Minneapolis", Phone: "777-888-9999", Height: 5.5, Married: true},
    17: {UserId: 17, FirstName: "Sophie", City: "Portland", Phone: "888-999-0000", Height: 5.8, Married: false},
    18: {UserId: 18, FirstName: "Jack", City: "Charlotte", Phone: "999-000-1111", Height: 5.8, Married: true},
    19: {UserId: 19, FirstName: "Isabella", City: "San Francisco", Phone: "111-222-3333", Height: 6.1, Married: false},
    20: {UserId: 20, FirstName: "Robert", City: "Tampa", Phone: "222-333-4444", Height: 5.7, Married: true},
    21: {UserId: 21, FirstName: "Emma", City: "Detroit", Phone: "333-444-5555", Height: 5.9, Married: false},
    22: {UserId: 22, FirstName: "Matthew", City: "Phoenix", Phone: "444-555-6666", Height: 6.2, Married: true},
    23: {UserId: 23, FirstName: "Grace", City: "Seattle", Phone: "555-666-7777", Height: 5.8, Married: false},
    24: {UserId: 24, FirstName: "Michael", City: "Miami", Phone: "666-777-8888", Height: 6.0, Married: true},
    25: {UserId: 25, FirstName: "Hannah", City: "Denver", Phone: "777-888-9999", Height: 5.5, Married: false},
    26: {UserId: 26, FirstName: "Joseph", City: "Dallas", Phone: "888-999-0000", Height: 5.7, Married: true},
    27: {UserId: 27, FirstName: "Lily", City: "Minneapolis", Phone: "999-000-1111", Height: 6.1, Married: false},
    28: {UserId: 28, FirstName: "Daniel", City: "Atlanta", Phone: "111-222-3333", Height: 5.4, Married: true},
    29: {UserId: 29, FirstName: "Oliver", City: "Boston", Phone: "222-333-4444", Height: 6.3, Married: false},
    30: {UserId: 30, FirstName: "Sophia", City: "Chicago", Phone: "333-444-5555", Height: 5.8, Married: true},
    31: {UserId: 31, FirstName: "Liam", City: "LA", Phone: "444-555-6666", Height: 5.8, Married: true},
    32: {UserId: 32, FirstName: "Emma", City: "New York", Phone: "555-666-7777", Height: 5.6, Married: false},
    33: {UserId: 33, FirstName: "Noah", City: "Chicago", Phone: "666-777-8888", Height: 5.9, Married: true},
    34: {UserId: 34, FirstName: "Olivia", City: "San Francisco", Phone: "777-888-9999", Height: 6.1, Married: false},
    35: {UserId: 35, FirstName: "Sophia", City: "Houston", Phone: "888-999-0000", Height: 5.4, Married: true},
    36: {UserId: 36, FirstName: "Liam", City: "Seattle", Phone: "999-000-1111", Height: 5.9, Married: false},
    37: {UserId: 37, FirstName: "Ava", City: "Boston", Phone: "111-222-3333", Height: 6.0, Married: true},
    38: {UserId: 38, FirstName: "Lucas", City: "Los Angeles", Phone: "222-333-4444", Height: 6.2, Married: false},
    39: {UserId: 39, FirstName: "Mia", City: "San Diego", Phone: "333-444-5555", Height: 5.7, Married: true},
    40: {UserId: 40, FirstName: "Benjamin", City: "Miami", Phone: "444-555-6666", Height: 5.8, Married: false},
    41: {UserId: 41, FirstName: "Isabella", City: "Phoenix", Phone: "555-666-7777", Height: 5.6, Married: true},
    42: {UserId: 42, FirstName: "Mason", City: "Denver", Phone: "666-777-8888", Height: 5.5, Married: false},
    43: {UserId: 43, FirstName: "Eva", City: "Dallas", Phone: "777-888-9999", Height: 5.8, Married: true},
    44: {UserId: 44, FirstName: "Oliver", City: "Minneapolis", Phone: "888-999-0000", Height: 5.8, Married: false},
    45: {UserId: 45, FirstName: "Lily", City: "Portland", Phone: "999-000-1111", Height: 6.1, Married: true},
    46: {UserId: 46, FirstName: "Noah", City: "Charlotte", Phone: "111-222-3333", Height: 5.8, Married: false},
    47: {UserId: 47, FirstName: "Sophie", City: "San Francisco", Phone: "555-666-7777", Height: 6.1, Married: true},
    48: {UserId: 48, FirstName: "Matthew", City: "Tampa", Phone: "222-333-4444", Height: 5.7, Married: false},
    49: {UserId: 49, FirstName: "Emma", City: "Detroit", Phone: "666-777-8888", Height: 6.0, Married: true},
    50: {UserId: 50, FirstName: "Liam", City: "Phoenix", Phone: "555-666-7777", Height: 5.8, Married: false},
}
